Fixed pagination alignment

--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -40,6 +40,9 @@
   color: var.$main-blue;
   height: 38px;
   width: 38px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &.active {
     background-color: var.$main-blue;
